html.index js complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!--Link to Highscores-->
     <div id = "wrapper">
-        <div id = "currentTime"></div>
+        <div id = "currentTime">75</div>
         <!--Div for questions-->
         <div id ="questionsDiv">
             <h1>Coding Quiz Challenge</h1>
