--- a/highscore.html
+++ b/highscore.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Document</title>
 </head>
@@ -14,13 +14,13 @@
         <div id="current-time"></div>
         <div id="questionDiv">
             <h1>Highscores</h1>
-            <ul id = "highscore"></ul>
+            <ul id = "highScore"></ul>
             <!--Buttons-->
             <button id="goBack">Go Back</button>
             <button id="clear" value="reset">Clear Highscore</button>
         </div>
     </div>
-    
+    <script type="text/javascript" src="highscores.js"></script>
 </body>
 
 </html>
